--- a/ryan_spread.cfg
+++ b/ryan_spread.cfg
@@ -1,6 +1,4 @@
 adv.binds "Short Names"
-adv.bombinfo_x 550
-adv.bombinfo_y 105
 adv.confirm "On"
 adv.conkey 0
 adv.dpi "100% (default)"
@@ -9,7 +7,7 @@ adv.menukey 45
 bind 13 689
 con 100 100
 esp.chams.enemy.occluded "Flat"
-esp.chams.enemy.occluded.clr 239 53 190 255
+esp.chams.enemy.occluded.clr 239 53 195 135
 esp.chams.enemy.overlay.glow "Off"
 esp.chams.enemy.overlay.glow.clr 255 255 255 255
 esp.chams.enemy.overlay.glowhealth "Off"
@@ -18,7 +16,7 @@ esp.chams.enemy.overlay.glowhealth.healthclr2 0 255 0 255
 esp.chams.enemy.overlay.wireframe "Off"
 esp.chams.enemy.overlay.wireframe.clr 239 199 53 150
 esp.chams.enemy.visible "Flat"
-esp.chams.enemy.visible.clr 255 255 255 255
+esp.chams.enemy.visible.clr 111 53 239 137
 esp.chams.enemyattachments.occluded "Off"
 esp.chams.enemyattachments.occluded.clr 240 55 80 255
 esp.chams.enemyattachments.overlay.glow "Off"
@@ -55,8 +53,8 @@ esp.chams.local.overlay.glowhealth.healthclr1 255 0 0 255
 esp.chams.local.overlay.glowhealth.healthclr2 0 255 0 255
 esp.chams.local.overlay.wireframe "Off"
 esp.chams.local.overlay.wireframe.clr 15 153 255 150
-esp.chams.local.visible "Off"
-esp.chams.local.visible.clr 15 196 255 255
+esp.chams.local.visible "Flat"
+esp.chams.local.visible.clr 249 84 210 137
 esp.chams.localarms.occluded "Off"
 esp.chams.localarms.occluded.clr 255 255 255 255
 esp.chams.localarms.overlay.glow "Off"
@@ -545,7 +543,6 @@ menu 179 137
 misc.antiuntrusted "On"
 misc.autoaccept "On"
 misc.autojump "Perfect"
-misc.bombinfo "On"
 misc.chatspam "Off"
 misc.duckjump "Off"
 misc.edgejump 0
@@ -713,20 +710,6 @@ rbot.antiaim.left.spinspeed 60
 rbot.antiaim.right "-145 Off"
 rbot.antiaim.right.rotation 58
 rbot.antiaim.right.spinspeed 60
-rbot.customjitter.box_base "Disable"
-rbot.customjitter.box_edges "Disable"
-rbot.customjitter.box_pitch "Disable"
-rbot.customjitter.jitter1_base 1
-rbot.customjitter.jitter1_edges 1
-rbot.customjitter.jitter1_pitch 1
-rbot.customjitter.jitter1_right 1
-rbot.customjitter.jitter2_base 1
-rbot.customjitter.jitter2_edges 1
-rbot.customjitter.jitter2_pitch 1
-rbot.customjitter.jitter2_right 1
-rbot.customjitter.speed_box_base "More fast"
-rbot.customjitter.speed_box_edges "More slow"
-rbot.customjitter.speed_box_pitch "Fastest"
 rbot.hitscan.accuracy "Pistol"
 rbot.hitscan.accuracy.asniper.adaptivedamage "On"
 rbot.hitscan.accuracy.asniper.autowall "On"
@@ -751,7 +734,7 @@ rbot.hitscan.accuracy.pistol.autowall "On"
 rbot.hitscan.accuracy.pistol.enhitchance "On"
 rbot.hitscan.accuracy.pistol.hitchance 35
 rbot.hitscan.accuracy.pistol.hitchanceburst 35
-rbot.hitscan.accuracy.pistol.mindamage 47
+rbot.hitscan.accuracy.pistol.mindamage 40
 rbot.hitscan.accuracy.rifle.adaptivedamage "On"
 rbot.hitscan.accuracy.rifle.autowall "On"
 rbot.hitscan.accuracy.rifle.enhitchance "On"
@@ -781,7 +764,7 @@ rbot.hitscan.accuracy.smg.autowall "On"
 rbot.hitscan.accuracy.smg.enhitchance "On"
 rbot.hitscan.accuracy.smg.hitchance 45
 rbot.hitscan.accuracy.smg.hitchanceburst 55
-rbot.hitscan.accuracy.smg.mindamage 8
+rbot.hitscan.accuracy.smg.mindamage 34
 rbot.hitscan.accuracy.sniper.adaptivedamage "On"
 rbot.hitscan.accuracy.sniper.autowall "On"
 rbot.hitscan.accuracy.sniper.enhitchance "On"
@@ -919,8 +902,8 @@ bindtoggle "Capslock" rbot.hitscan.accuracy.asniper.mindamage "4" "40" 0
 bindtoggle "Capslock" rbot.hitscan.accuracy.sniper.mindamage "10" "104" 1
 bindtoggle "Capslock" rbot.hitscan.accuracy.scout.mindamage "6" "101" 2
 bindtoggle "Capslock" rbot.hitscan.accuracy.hpistol.mindamage "66" "100" 3
-bindtoggle "Capslock" rbot.hitscan.accuracy.pistol.mindamage "8" "47" 4
-bindtoggle "Capslock" rbot.hitscan.accuracy.smg.mindamage "8" "34" 5
+bindtoggle "Capslock" rbot.hitscan.accuracy.smg.mindamage "8" "34" 4
+bindtoggle "Capslock" rbot.hitscan.accuracy.pistol.mindamage "8" "40" 5
 unalias
 alias invertrot "rbot.antiaim.rotation"
 alias autodir1 "rbot.antiaim.left -157.0 Desync; rbot.antiaim.left.lby 100.0; rbot.antiaim.left.rotation -58.0; rbot.antiaim.right -175.0 Desync; rbot.antiaim.right.lby -100.0; rbot.antiaim.right.rotation 58.0; bind Mouse5 autodir2"
